tests/e2e/try_scope_invalid4.error
Error: syntax error in story at line 6, column 3

6|      b += 1
        ^

E0101: Variable `b` has not been defined.
