tests/e2e/try_scope_invalid4.story
try
  a = 0
catch
  b = 42
finally
  b += 1
